5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4480/executions/1595_842.log
== TEST (2019-04-16 08:15:16) 
-- CODE:
num = int(input("digite um numero inteiro: "))
soma = 0


-- OUTPUT:
primeiro_caso_de_teste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 08:19:35) 
-- CODE:
num = int(input("digite um numero inteiro: "))
soma = 0
while (x !=0):
	resto = x % 10
	x = (x - resto)//10
	soma = soma + resto
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while (x !=0):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 08:21:06) 
-- CODE:
num = int(input("digite um numero inteiro: "))
soma = 0
while (num !=0):
	resto = num % 10
	num = (num - resto)//10
	soma = soma + resto
print(soma)
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 08:21:44) 
-- CODE:
num = int(input("digite um numero inteiro: "))
soma = 0
while (num !=0):
	resto = num % 10
	num = (num - resto)//10
	soma = soma + resto
print(soma)
-- EXECUTION TIME:
0.181514
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
20
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
